--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APEX Digital Solutions | World-Class Digital Agency</title>
-    <meta name="description" content="Building digital experiences that define tomorrow. Full-stack innovation for startups and enterprises by elite developers." />
+    <meta
+      name="description"
+      content="Building digital experiences that define tomorrow. Full-stack innovation for startups and enterprises by elite developers."
+    />
     <meta name="author" content="APEX Digital Solutions" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
 
-    <meta property="og:title" content="APEX Digital Solutions | Elite Digital Agency" />
-    <meta property="og:description" content="Full-stack innovation for startups and enterprises. We build what others imagine." />
+    <meta
+      property="og:title"
+      content="APEX Digital Solutions | Elite Digital Agency"
+    />
+    <meta
+      property="og:description"
+      content="Full-stack innovation for startups and enterprises. We build what others imagine."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@apex_digital" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
+    <link rel="shortcut icon" href="logo.svg" type="image/x-icon" />
   </head>
 
   <body>
