Optimize index.html with improved meta tags, Open Graph data, structured SEO, and performance enhancements

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>APEX Digital Solutions | World-Class Digital Agency</title>
+    <title>APEX Digital Solutions | Elite Full-Stack Development Agency</title>
     <meta
       name="description"
-      content="Building digital experiences that define tomorrow. Full-stack innovation for startups and enterprises by elite developers."
+      content="We build digital experiences that drive 245% growth. Full-stack innovation for startups and enterprises by elite developers."
     />
     <meta name="author" content="APEX Digital Solutions" />
+
+    <!-- Preload critical resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,31 +18,127 @@
       rel="stylesheet"
     />
 
+    <!-- Open Graph Meta Tags - Premium & Engaging -->
     <meta
       property="og:title"
-      content="APEX Digital Solutions | Elite Digital Agency"
+      content="APEX Digital Solutions | 245% Growth Guaranteed"
     />
     <meta
       property="og:description"
-      content="Full-stack innovation for startups and enterprises. We build what others imagine."
+      content="🚀 We build what others imagine. Full-stack development that drives measurable business results. See how we deliver 99.9% uptime & enterprise-grade solutions."
     />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://apex-digital.solutions" />
     <meta
       property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
+      content="https://apex-digital.solutions/og-image.jpg"
     />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="APEX Digital Solutions - Building Tomorrow's Digital Experiences"
+    />
+    <meta property="og:site_name" content="APEX Digital Solutions" />
+    <meta property="og:locale" content="en_US" />
 
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@apex_digital" />
+    <meta name="twitter:creator" content="@apex_digital" />
+    <meta
+      name="twitter:title"
+      content="APEX Digital Solutions | Elite Development Agency"
+    />
+    <meta
+      name="twitter:description"
+      content="💎 We transform ideas into market-leading digital experiences. Full-stack development with 99.9% uptime & 245% average growth."
+    />
     <meta
       name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
+      content="https://apex-digital.solutions/twitter-image.jpg"
     />
-    <link rel="shortcut icon" href="logo.svg" type="image/x-icon" />
+    <meta
+      name="twitter:image:alt"
+      content="APEX Digital Solutions - Premium Digital Agency"
+    />
+
+    <!-- Additional Meta Tags for Better Sharing -->
+    <meta name="theme-color" content="#0066FF" />
+    <meta name="msapplication-TileColor" content="#0066FF" />
+
+    <!-- Structured Data for Rich Snippets -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "APEX Digital Solutions",
+        "url": "https://apex-digital.solutions",
+        "logo": "https://apex-digital.solutions/logo.svg",
+        "description": "Elite full-stack development agency building digital experiences that drive 245% growth for startups and enterprises.",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Global",
+          "addressCountry": "Worldwide"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "customer service",
+          "email": "contact@apex-digital.solutions"
+        },
+        "sameAs": [
+          "https://twitter.com/apex_digital",
+          "https://linkedin.com/company/apex-digital-solutions"
+        ],
+        "areaServed": "Worldwide",
+        "knowsAbout": [
+          "React",
+          "Node.js",
+          "TypeScript",
+          "AWS",
+          "Python",
+          "AI/ML",
+          "WebRTC",
+          "PostgreSQL",
+          "Kubernetes"
+        ]
+      }
+    </script>
+
+    <!-- Favicon and App Icons -->
+    <link rel="shortcut icon" href="/logo.svg" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Preload critical images -->
+    <link rel="preload" as="image" href="/og-image.jpg" />
+    <link rel="preload" as="image" href="/hero-bg.jpg" />
+
+    <!-- Performance Optimization -->
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+
+    <!-- Security Headers (would be in actual server config) -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:;"
+    />
   </head>
 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Performance Monitoring -->
+    <script>
+      // Simple performance monitoring
+      window.addEventListener("load", () => {
+        const loadTime =
+          performance.timing.loadEventEnd - performance.timing.navigationStart;
+        console.log(`APEX Digital: Page loaded in ${loadTime}ms`);
+      });
+    </script>
   </body>
 </html>
