Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>APEX Digital Solutions | Elite Full-Stack Development Agency</title>
+    <title>OMERA Technology</title>
     <meta
       name="description"
       content="We build digital experiences that drive 245% growth. Full-stack innovation for startups and enterprises by elite developers."
     />
-    <meta name="author" content="APEX Digital Solutions" />
+    <meta name="author" content="OMERA Technology" />
 
-    <!-- Preload critical resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,63 +17,59 @@
       rel="stylesheet"
     />
 
-    <!-- Open Graph Meta Tags - Premium & Engaging -->
     <meta
       property="og:title"
-      content="APEX Digital Solutions | 245% Growth Guaranteed"
+      content="OMERA Technology | Build. Scale. Dominate."
     />
     <meta
       property="og:description"
-      content="🚀 We build what others imagine. Full-stack development that drives measurable business results. See how we deliver 99.9% uptime & enterprise-grade solutions."
+      content="🚀 We build what others imagine. Full-stack development that drives measurable business results. See how we deliver 99.9% uptime & 245% growth."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://apex-digital.solutions" />
+    <meta property="og:url" content="https://omera.tech" />
     <meta
       property="og:image"
-      content="https://apex-digital.solutions/og-image.jpg"
+      content="https://omera.tech/images/og-image.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta
       property="og:image:alt"
-      content="APEX Digital Solutions - Building Tomorrow's Digital Experiences"
+      content="OMERA Technology - Build. Scale. Dominate."
     />
-    <meta property="og:site_name" content="APEX Digital Solutions" />
+    <meta property="og:site_name" content="OMERA Technology" />
     <meta property="og:locale" content="en_US" />
 
-    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@apex_digital" />
-    <meta name="twitter:creator" content="@apex_digital" />
+    <meta name="twitter:site" content="@omeratech" />
+    <meta name="twitter:creator" content="@omeratech" />
     <meta
       name="twitter:title"
-      content="APEX Digital Solutions | Elite Development Agency"
+      content="OMERA Technology | Elite Development Agency"
     />
     <meta
       name="twitter:description"
-      content="💎 We transform ideas into market-leading digital experiences. Full-stack development with 99.9% uptime & 245% average growth."
+      content="💎 Transform ideas into market-leading digital experiences. Full-stack development with 99.9% uptime & 245% average growth."
     />
     <meta
       name="twitter:image"
-      content="https://apex-digital.solutions/twitter-image.jpg"
+      content="https://omera.tech/images/twitter-image.png"
     />
     <meta
       name="twitter:image:alt"
-      content="APEX Digital Solutions - Premium Digital Agency"
+      content="OMERA Technology - Build. Scale. Dominate."
     />
 
-    <!-- Additional Meta Tags for Better Sharing -->
-    <meta name="theme-color" content="#0066FF" />
-    <meta name="msapplication-TileColor" content="#0066FF" />
+    <meta name="theme-color" content="#FF6B35" />
+    <meta name="msapplication-TileColor" content="#FF6B35" />
 
-    <!-- Structured Data for Rich Snippets -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "APEX Digital Solutions",
-        "url": "https://apex-digital.solutions",
-        "logo": "https://apex-digital.solutions/logo.svg",
+        "name": "OMERA Technology",
+        "url": "https://omera.tech",
+        "logo": "https://omera.tech/images/logo.svg",
         "description": "Elite full-stack development agency building digital experiences that drive 245% growth for startups and enterprises.",
         "address": {
           "@type": "PostalAddress",
@@ -84,11 +79,11 @@
         "contactPoint": {
           "@type": "ContactPoint",
           "contactType": "customer service",
-          "email": "contact@apex-digital.solutions"
+          "email": "contact@omera.tech"
         },
         "sameAs": [
-          "https://twitter.com/apex_digital",
-          "https://linkedin.com/company/apex-digital-solutions"
+          "https://twitter.com/omeratech",
+          "https://linkedin.com/company/omera-technology"
         ],
         "areaServed": "Worldwide",
         "knowsAbout": [
@@ -98,46 +93,34 @@
           "AWS",
           "Python",
           "AI/ML",
-          "WebRTC",
           "PostgreSQL",
           "Kubernetes"
         ]
       }
     </script>
 
-    <!-- Favicon and App Icons -->
     <link rel="shortcut icon" href="/logo.svg" type="image/x-icon" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
-    <!-- Preload critical images -->
-    <link rel="preload" as="image" href="/og-image.jpg" />
-    <link rel="preload" as="image" href="/hero-bg.jpg" />
+    <link rel="preload" as="image" href="/images/og-image.png" />
+    <link rel="preload" as="image" href="/images/hero-bg.png" />
 
-    <!-- Performance Optimization -->
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
     <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
-
-    <!-- Security Headers (would be in actual server config) -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:;"
-    />
   </head>
 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 
-    <!-- Performance Monitoring -->
     <script>
-      // Simple performance monitoring
       window.addEventListener("load", () => {
         const loadTime =
           performance.timing.loadEventEnd - performance.timing.navigationStart;
-        console.log(`APEX Digital: Page loaded in ${loadTime}ms`);
+        console.log(`OMERA Technology: Page loaded in ${loadTime}ms`);
       });
     </script>
   </body>
