--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
       }
     </script>
 
-    <link rel="shortcut icon" href="/logo.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="/images/logo.svg" type="image/x-icon" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/logo.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/logo.svg" />
     <link rel="manifest" href="/site.webmanifest" />
 
     <link rel="preload" as="image" href="/images/og-image.png" />
